update: included the datepicker and dummy list of events to the landing page

--- a/src/index.html
+++ b/src/index.html
@@ -190,19 +190,64 @@
     </div>
     <!-- End Carousel -->
     <!-- Begin Welcome -->
-	<div class="container-fluid">
-		<div class="row">
-			<div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
-                <h1 class="bold upper txt-primary-color1">Welcome to</h1>
-				<h1 class="bold upper txt-greyscale-color5">St. Peter's Church, Bandra</h1>
-			</div>
-		</div>
-	</div>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 col-lg-offset-2 col-md-offset-2 col-sm-offset-2">
+                <h1 class="bold upper txt-primary-color1 additional-margin-top">Welcome to</h1>
+                <h1 class="bold upper txt-greyscale-color5 reduce-margin-top">St. Peter's Church, Bandra</h1>
+                <p>
+                    Keep yourelf updated with the current events and happenings at St. Peter’s Church from time to time. And feel free to navigate across the website to know more at St. Peter’s Church, Bandra.
+                </p>
+                <!-- Begin Event schedule -->
+                <div class="row">
+                	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                		<h1 class="bold upper txt-primary-color1">Event</h1>
+                		<h1 class="bold upper txt-greyscale-color5 reduce-margin-top">Schedule</h1>
+                	</div>
+                	<div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                		<img class="welcome-church-logo" src="styles/images/site-logo-large.svg" alt="church logo">
+                	</div>	
+                </div>
+                <div class="row schedule-container">
+                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 datepicker-container">
+                        <!-- Begin Datepicker -->
+                        <!-- End Datepicker -->    
+                    </div>
+                    <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 event-container">
+                        <!-- Begin Events -->
+                        <p class="margin-top-20 margin-bottom-40">
+                            <span class="bold">18 Oct, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        </p>
+                        <p class="margin-bottom-40">
+                            <span class="bold">22 Oct, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                        </p>
+                        <p class="margin-bottom-40">
+                            <span class="bold">2 Nov, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                        <p class="margin-bottom-40">
+                            <span class="bold">15 Nov, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                        <p class="margin-bottom-40">
+                            <span class="bold">03 Dec, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                        <p class="margin-bottom-40">
+                            <span class="bold">10 Dec, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                        </p>
+                        <!-- End Events -->
+                    </div>
+                </div>
+                <!-- End Event schedule -->
+            </div>
+
+        </div>
+    </div>
     <!-- End Welcome -->
     <!-- Begin scripts here -->
     <script src="scripts/vendor/jquery-1.12.4.js"></script>
     <script src="scripts/vendor/bootstrap.js"></script>
+    <script src="scripts/vendor/bootstrap-datepicker.js"></script>
     <script src="scripts/vendor/holder.js"></script>
+    <script src="scripts/main.js"></script>
     <!-- For Production, Uncomment the following lines below -->
     <!-- End scripts here -->
 </body>
