update: added the our mission section.

--- a/src/index.html
+++ b/src/index.html
@@ -200,26 +200,26 @@
                 </p>
                 <!-- Begin Event schedule -->
                 <div class="row">
-                	<div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
-                		<h1 class="bold upper txt-primary-color1">Event</h1>
-                		<h1 class="bold upper txt-greyscale-color5 reduce-margin-top">Schedule</h1>
-                	</div>
-                	<div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
-                		<img class="welcome-church-logo" src="styles/images/site-logo-large.svg" alt="church logo">
-                	</div>	
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <h1 class="bold upper txt-primary-color1">Event</h1>
+                        <h1 class="bold upper txt-greyscale-color5 reduce-margin-top">Schedule</h1>
+                    </div>
+                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12">
+                        <img class="welcome-church-logo" src="styles/images/site-logo-large.svg" alt="church logo">
+                    </div>
                 </div>
                 <div class="row schedule-container">
                     <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 datepicker-container">
                         <!-- Begin Datepicker -->
-                        <!-- End Datepicker -->    
+                        <!-- End Datepicker -->
                     </div>
                     <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 event-container">
                         <!-- Begin Events -->
                         <p class="margin-top-20 margin-bottom-40">
-                            <span class="bold">18 Oct, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                            <span class="bold">18 Oct, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                         </p>
                         <p class="margin-bottom-40">
-                            <span class="bold">22 Oct, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. 
+                            <span class="bold">22 Oct, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                         </p>
                         <p class="margin-bottom-40">
                             <span class="bold">2 Nov, 2017:</span> Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
@@ -236,12 +236,54 @@
                         <!-- End Events -->
                     </div>
                 </div>
+                <p class="separator margin-top-60">
+                </p>
                 <!-- End Event schedule -->
             </div>
-
         </div>
     </div>
     <!-- End Welcome -->
+    <!-- Begin Our Mission -->
+    <div class="container-fluid mission-container">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                <h1 class="bold upper txt-primary-color1 additional-margin-top">Our</h1>
+                <h1 class="bold upper txt-greyscale-color1 reduce-margin-top margin-bottom-50">Mission</h1>
+                <p class="txt-greyscale-color1 separator margin-bottom-40">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                </p>
+                <button type="button" class="btn btn-primary">Read More</button>
+            </div>
+            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 mission-group-container margin-top-80">
+                <div class="row">
+                    <div class="col-lg-6 col-md-6 col-sm-6 col-xs-12">
+                        <h5 class="separator-included upper bold">Faith Formation Group</h5>
+                        <p class="margin-bottom-30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <h5 class="separator-included upper bold">Family Outreach</h5>
+                        <p class="margin-bottom-30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <h5 class="separator-included upper bold">Civic Involvment</h5>
+                        <p class="margin-bottom-30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                    <div class="col-lg-5 col-md-5 col-sm-5 col-xs-12 col-lg-offset-1 col-md-offset-1">
+                        <h5 class="separator-included upper bold">Faith Celebration Group</h5>
+                        <p class="margin-bottom-30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                        <h5 class="separator-included upper bold">Social Outreach</h5>
+                        <p class="margin-bottom-30">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Our Mission -->
     <!-- Begin scripts here -->
     <script src="scripts/vendor/jquery-1.12.4.js"></script>
     <script src="scripts/vendor/bootstrap.js"></script>
