update: added the our priests section to the landing page.

--- a/src/index.html
+++ b/src/index.html
@@ -284,10 +284,46 @@
         </div>
     </div>
     <!-- End Our Mission -->
+    <!-- Begin Our Priests -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                <h1 class="bold upper txt-primary-color1 additional-margin-top">Our</h1>
+                <h1 class="bold upper txt-greyscale-color5 reduce-margin-top margin-bottom-50">Priests</h1>
+                <p class="txt-$greyscale-color3 separator margin-bottom-40">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                </p>
+                <button type="button" class="btn btn-secondary">Read More</button>
+            </div>
+            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 margin-top-80 anyslider-carousel-container">
+                <ul class="anyslider">
+                    <li class="panel1">
+                        <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images carousel-inline-last-images"></a>
+                        <div class="carousel-spacer"></div>
+                        <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images carousel-inline-last-images"></a>
+                    </li>
+                    <li class="panel2">
+                        <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images carousel-inline-last-images"></a>
+                        <div class="carousel-spacer"></div>
+                        <a href="#"><img data-src="holder.js/234x234?theme=lava" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=vine" alt="test 1" class="carousel-inline-images"></a>
+                        <a href="#"><img data-src="holder.js/234x234?theme=social" alt="test 1" class="carousel-inline-images carousel-inline-last-images"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- End Our Priests -->
     <!-- Begin scripts here -->
     <script src="scripts/vendor/jquery-1.12.4.js"></script>
     <script src="scripts/vendor/bootstrap.js"></script>
     <script src="scripts/vendor/bootstrap-datepicker.js"></script>
+    <script src="scripts/vendor/jquery.anythingslider.js"></script>
     <script src="scripts/vendor/holder.js"></script>
     <script src="scripts/main.js"></script>
     <!-- For Production, Uncomment the following lines below -->
