--- a/src/index.html
+++ b/src/index.html
@@ -319,6 +319,53 @@
         </div>
     </div>
     <!-- End Our Priests -->
+    <!-- Begin Our Parish -->
+    <div class="container-fluid parish-container">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                <h1 class="bold upper txt-primary-color1 additional-margin-top">Our</h1>
+                <h1 class="bold upper txt-greyscale-color1 reduce-margin-top margin-bottom-50">Parish</h1>
+                <p class="txt-greyscale-color1 separator margin-bottom-40">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris.
+                </p>
+                <button type="button" class="btn btn-primary">Read More</button>
+            </div>
+            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 mission-group-container margin-top-80">
+                <div id="carousel-parish" class="carousel slide" data-ride="carousel" data-interval="5000">
+                    <!-- Indicators -->
+                    <ol class="carousel-indicators">
+                        <li data-target="#carousel-parish" data-slide-to="0" class="active"></li>
+                        <li data-target="#carousel-parish" data-slide-to="1"></li>
+                        <li data-target="#carousel-parish" data-slide-to="2"></li>
+                    </ol>
+                    <!-- Wrapper for slides -->
+                    <div class="carousel-inner" role="listbox">
+                        <div class="item active">
+                            <img data-src="holder.js/100px500?theme=vine" alt="carousel-image">
+                        </div>
+                        <div class="item">
+                            <img data-src="holder.js/100px500?theme=social" alt="carousel-image">
+                        </div>
+                        <div class="item">
+                            <img data-src="holder.js/100px500?theme=lava" alt="carousel-image">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Our Parish -->
+    <!-- Begin Additional Links -->
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-1 col-md">
+                <div class="bulletin-container">
+                    <h1 class="bold upper txt-primary-color1 additional-margin-top">Bulletin</h1>
+                    <h1 class="bold upper txt-greyscale-color1 reduce-margin-top margin-bottom-50">Keystone</h1>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- End Additional Links -->
     <!-- Begin scripts here -->
     <script src="scripts/vendor/jquery-1.12.4.js"></script>
     <script src="scripts/vendor/bootstrap.js"></script>
