update: added the additional links section to the landing page

--- a/src/index.html
+++ b/src/index.html
@@ -357,11 +357,34 @@
     <!-- Begin Additional Links -->
     <div class="container-fluid">
         <div class="row">
-            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-1 col-md">
-                <div class="bulletin-container">
-                    <h1 class="bold upper txt-primary-color1 additional-margin-top">Bulletin</h1>
-                    <h1 class="bold upper txt-greyscale-color1 reduce-margin-top margin-bottom-50">Keystone</h1>
+            <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                <div class="bulletin-container margin-bottom-50">
+                    <h1 class="bold upper txt-primary-color1 additional-margin-top padding-top-10">Bulletin</h1>
+                    <h1 class="bold upper txt-greyscale-color5 reduce-margin-top padding-bottom-10">Keystone</h1>
                 </div>
+                <div class="gallery-container">
+                    <h1 class="bold upper txt-greyscale-color5">Gallery</h1>
+                </div>
+            </div>
+            <div class="col-lg-7 col-md-7 col-sm-7 col-xs-12 additional-link-container">
+                <ul class="additional-link-list">
+                    <li>
+                        <h5 class="bold">Online Bible</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </li>
+                    <li>
+                        <h5 class="bold">Bible Quiz / Bible Study</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </li>
+                    <li>
+                        <h5 class="bold">Spiritual Blogs</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </li>
+                    <li>
+                        <h5 class="bold">Sites to increase your faith | Inspirational Videos | Music | Books</h5>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</p>
+                    </li>
+                </ul>
             </div>
         </div>
     </div>
