update: added the footer to the landing page

--- a/src/index.html
+++ b/src/index.html
@@ -389,6 +389,88 @@
         </div>
     </div>
     <!-- End Additional Links -->
+    <footer class="container-fluid bg-greyscale-color4 padding-top-50 padding-bottom-50">
+        <div class="row">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 col-lg-offset-1 col-md-offset-1 col-sm-offset-1">
+                <h5 class="bold upper txt-greyscale-color1 margin-bottom-20">Our Address</h5>
+                <p class="txt-primary-color1">
+                    St. Peter’s Church,
+                    <br /> Hill Road, Bandra (West),
+                    <br /> Mumbai 400 050. INDIA.
+                </p>
+                <p class="txt-primary-color1">
+                    <span class="txt-greyscale-color1">
+                        Tel.:
+                    </span> (+91 22) 2642 3098
+                </p>
+                <p>
+                    <span class="txt-greyscale-color1">
+                        Email.:
+                    </span> <a class="link-secondary" href="mailto:stpetersbandra@gmail.com">stpetersbandra@gmail.com</a>
+                </p>
+                <p>
+                    <span class="txt-greyscale-color1">
+                        Website.:
+                    </span> <a class="link-secondary" href="#">www.stpetersbandra.org</a>
+                </p>
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                <h5 class="bold upper txt-greyscale-color1 margin-bottom-20">Quick Links</h5>
+                <p>
+                    <a class="link-secondary" href="#">Our Parish</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">News</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Information</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Zones</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Groups</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Gallery</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Contact Us</a>
+                </p>
+            </div>
+            <div class="col-lg-2 col-md-2 col-sm-2 col-xs-12">
+                <h5 class="bold upper txt-greyscale-color1 margin-bottom-20">Important</h5>
+                <p>
+                    <a class="link-secondary" href="#">Mass Timings</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Parish Information</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Parish Contacts</a>
+                </p>
+                <p>
+                    <a class="link-secondary" href="#">Notices of the week</a>
+                </p>
+            </div>
+            <div class="col-lg-3 col-md-3 col-sm-3 col-lg-offset-1 col-md-offset-1 col-sm-offset-1 col-xs-12">
+                <h5 class="bold upper txt-greyscale-color1 margin-bottom-20">Sign up for updates</h5>
+                <button type="button" class="btn btn-primary margin-bottom-20">Sign Up</button>
+                <ul class="social-links">
+                    <li>
+                        <a href="#">
+                            <img src="styles/images/social-facebook.svg" alt="facebook-icon">
+                        </a>
+                    </li>
+                    <li>
+                        <a href="#">
+                            <img src="styles/images/social-youtube.svg" alt="youtube-icon">
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     <!-- Begin scripts here -->
     <script src="scripts/vendor/jquery-1.12.4.js"></script>
     <script src="scripts/vendor/bootstrap.js"></script>
